# xrootd-cmsjson

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cc  storage_test.json  test_sites.sh
.github/workflows/: main.yaml
cmake/: FindJsoncpp.cmake
docker/: Dockerfile  Dockerfile.base  Dockerfile.rpm  Dockerfile.test
spec/: xrootd-cmsjson.spec  xrootd-cmstfc.spec
src/: XrdCmsJson.cc  XrdCmsJson.hh  XrdCmsTfc.cc  XrdCmsTfc.hh
tests/: storage.json  test_json.py
